# Rust

./: .gitignore
Intro/: hello.rs
axum_auth/: .env  Cargo.toml  README.md
axumapi/: .env  Cargo.toml
axumapi/Notes/: Monitoring.md  collections.md  entity.md  intro.md
axumapi/Notes/1_api/: Cargo.toml
axumapi/Notes/1_api/src/models/: user_model.rs
axumapi/Notes/2_api_cors_db_less_boilerplate/: Cargo.toml
axumapi/Notes/2_api_cors_db_less_boilerplate/src/: main.rs
axumapi/Notes/2_api_cors_db_less_boilerplate/src/handlers/: auth_handlers.rs  user_handlers.rs
axumapi/Notes/3_ Proper error handling/: .env  Cargo.toml
axumapi/Notes/3_ Proper error handling/src/: main.rs
axumapi/Notes/3_ Proper error handling/src/handlers/: auth_handlers.rs  user_handlers.rs
axumapi/Notes/4_Auth/entity/src/: user.rs
axumapi/Notes/4_Auth/migration/src/: m20220101_000001_create_table.rs
axumapi/Notes/4_Auth/src/handlers/: auth_handlers.rs  user_handlers.rs
axumapi/Notes/4_Auth/src/routes/: user_routes.rs
axumapi/Notes/5_relationships/: intro.md
axumapi/Notes/5_relationships/entity/: Cargo.toml
axumapi/Notes/5_relationships/entity/src/: comment.rs  post.rs  user.rs
axumapi/Notes/5_relationships/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250517_150458_create_comments_tables.rs
axumapi/Notes/5_relationships/src/: main.rs
axumapi/Notes/5_relationships/src/handlers/: auth_handlers.rs  mod.rs  post_handlers.rs
axumapi/Notes/5_relationships/src/routes/: auth_routes.rs  home_routes.rs  user_routes.rs
axumapi/Notes/5_relationships/src/utils/: api_errors.rs  jwts.rs
axumapi/config/: prometheus.yml
axumapi/migration/src/: m20220101_000001_create_table.rs  m20250517_145754_create_post_tables.rs  m20250517_150458_create_comments_tables.rs
axumapi/src/: main.rs
axumapi/src/handlers/: auth_handlers.rs  post_handlers.rs  user_handlers.rs
axumapi/src/models/: post_model.rs  user_model.rs
axumapi/src/routes/: auth_routes.rs  user_routes.rs
axumapi/src/utils/: api_errors.rs  constants.rs  guard.rs  mod.rs
fastwebsocket/: m.rs
fastwebsocket/fastw-client-test/: Cargo.toml
fastwebsocket/fastw-client-test/src/: arb_engine.rs  connect_binance.rs  connect_hyperliquid.rs  main.rs  types_enums.rs  websocket_client.rs
hell_async/: Cargo.toml
hello_async/: Cargo.toml
leetcode/: Cargo.toml
my_microservice/: .proto  Cargo.toml
threads_app/: Cargo.toml
webapi/: Cargo.toml
webapi/Notes/1_build_api/: intro.md
webapi/Notes/1_build_api/src/: main.rs
webapi/Notes/1_build_api/src/routes/handlers/: home_handler.rs
webapi/Notes/1_build_api/src/utils/: constants.rs
webapi/Notes/2_sea_orm_db/: .env  Cargo.toml  intro.md
webapi/Notes/2_sea_orm_db/migration/src/: m20250421_181323_create_user.rs
webapi/Notes/2_sea_orm_db/src/: main.rs
webapi/Notes/2_sea_orm_db/src/utils/: api_response.rs  constants.rs
webapi/Notes/3_auth/: intro.md
webapi/Notes/3_auth/1_login_register/: Cargo.toml
webapi/Notes/3_auth/1_login_register/migration/: Cargo.toml
webapi/Notes/3_auth/1_login_register/src/: main.rs
webapi/Notes/3_auth/1_login_register/src/routes/handlers/: home_handler.rs
webapi/Notes/3_auth/1_login_register/src/utils/: constants.rs  jwt.rs
webapi/Notes/3_auth/2_middleware/entity/: Cargo.toml
webapi/Notes/3_auth/2_middleware/entity/src/: user.rs
webapi/Notes/3_auth/2_middleware/migration/src/: lib.rs
webapi/Notes/3_auth/2_middleware/src/: main.rs
webapi/Notes/3_auth/2_middleware/src/routes/: user_routes.rs
webapi/Notes/3_auth/2_middleware/src/routes/handlers/: auth_handler.rs  user_handler.rs
webapi/Notes/3_auth/2_middleware/src/routes/middlewares/: auth_middleware.rs
webapi/Notes/4_Error_handling/: Cargo.toml  intro.md
webapi/Notes/4_Error_handling/src/routes/: home_routes.rs  user_routes.rs
webapi/Notes/4_Error_handling/src/routes/handlers/: home_handler.rs  user_handler.rs
webapi/Notes/4_Error_handling/src/utils/: jwt.rs
webapi/Notes/5_Extract_Middleware_data/: .env  intro.md
webapi/Notes/5_Extract_Middleware_data/src/: main.rs
webapi/Notes/5_Extract_Middleware_data/src/routes/: auth_routes.rs
webapi/Notes/5_Extract_Middleware_data/src/routes/handlers/: auth_handler.rs  user_handler.rs
webapi/Notes/5_Extract_Middleware_data/src/routes/middlewares/: auth_middleware.rs
webapi/Notes/5_Extract_Middleware_data/src/utils/: jwt.rs
webapi/entity/src/: mod.rs  post.rs  prelude.rs  user.rs
webapi/migration/src/: lib.rs  m20220101_000001_create_user.rs  m20250421_181323_create_post.rs
webapi/src/: main.rs
webapi/src/routes/: post_routes.rs  user_routes.rs
webapi/src/routes/handlers/: home_handler.rs  post_handler.rs
webapi/src/routes/middlewares/: auth_middleware.rs
webapi/src/utils/: app_state.rs  constants.rs
(+77 files in other folders)
