[package]
name = "axumapi"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "entity", "migration"]


[dependencies]
axum = "0.8.4"
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
tokio = { version = "1.44.2", features = ["full"] }
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
chrono = "0.4.41"
derive_more = { version = "2.0.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["cors"] }
lazy_static = "1.5.0"
dotenv = "0.15.0"
serde_json = "1.0.140"
jsonwebtoken = "9.3.1"
serde = {version = "1.0.219" , features = ["derive"] }



[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]



