[package]
name = "webapi"
version = "0.1.0"
edition = "2024"


[workspace]
members = [".", "entity", "migration"]









[dependencies]
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
actix-web = "4"
serde = "1.0.219"
serde_json = "1.0.140"
env_logger = "0.11.8"
dotenv = "0.15.0"
lazy_static = "1.5.0" 
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
sha256 = "1.6.0"
chrono = "0.4.40"
jsonwebtoken = "9.3.1"
actix-web-lab = "0.24.1"


[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v4",
]